--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,9 @@
 <h1><%= title %></h1>
-<p>Welcome to MiM 2022</p>
+<h2>Welcome to MiM 2022</h2>
+
+<h3>This is our team</h3>
 <img src="team.jpg" alt="Our Team">
+<p>From left to right, Lilly, Katya, Lola and Rica</p>
+
+<h3>Some stats about Georgetown MiM</h3>
 
