--- a/views/products.ejs
+++ b/views/products.ejs
@@ -2,7 +2,7 @@
 
 <h1>Products</h1>
 
-<p className="lead">Browse products and services...</p>
+<p className="lead">We even learned how to create a database that keeps track of product orders. Try it out!</p>
 
 <!--
     BOOTSTRAP GRID
