--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -1,3 +1,15 @@
 <h1><%= message %></h1>
 
-<p>This is the hello page... </p>
+<h1>Student Testimonials</h1>
+
+<h3>Below are students' firsthand experience after a year in MiM:</h3>
+
+<ul>
+<li>Lola Abreu: 
+    My name is Lola Abreu and I am originally from Miami Florida. For my undergraduate studies I attended The Catholic University of America and graduated with a degree in accounting. I wanted to further my education with a program that would give me a more global experience and exposure to a team environment. MiM was the perfect fit for what I was looking for!
+</li>
+<li>Katya Hernandez:
+    Hi, my name is Katya Hernandez. I was born and raised in Guatemala, and my experience in the MiM program has been excellent. I studied Business with a concentration in Finance in Guatemala. Though I already studied Business as an undergrad, my studies at Georgetown's McDonough School of Business have helped me solidify my knowledge and delve deeper into data analytics, international business, and technology. My favorite part of the program was Ge Georgetown's community of diverse and talented students, through which I have expanded my network. I feel proud to know called them my friends.
+</li>
+
+</ul>
