--- a/views/stocks_form.ejs
+++ b/views/stocks_form.ejs
@@ -1,7 +1,7 @@
 
 <h2>Stocks Form</h2>
 
-<p>Request some stock market data...</p>
+<p>Request any stock data to see this awesome functionality we learned in Internet Business Technologies...</p>
 
 <form action="/stocks/dashboard" method="POST">
 
