--- a/views/stocks_form.ejs
+++ b/views/stocks_form.ejs
@@ -1,7 +1,7 @@
 
-<h2>Stocks Form</h2>
+<h1>Stocks Form</h1>
 
-<p>Request any stock data to see this awesome functionality we learned in Internet Business Technologies...</p>
+<h4>Request any stock data to see this awesome functionality we learned in Internet Business Technologies...</h4>
 
 <form action="/stocks/dashboard" method="POST">
 
