--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <h1>Welcome to MiM 2022</h1>
 
 <h3>This is our team</h3>
-<img src="team.jpg" alt="Our Team">
-<p>From left to right, Lilly, Katya, Lola and Rica</p>
+<img src="team.png" alt="Our Team">
+<p>From left to right: Lilly, Katya, Lola and Rica</p>
 
 
