--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <h1>Georgetown MiM Stats</h1>
 <br>
-<img src="MiM-2-Cohort-Class-Profile-1200w.png" alt="2020 Cohort">
+<center><img src="images/MiM-2-Cohort-Class-Profile-1200w.png" alt="2020 Cohort" width="800" class="center"></center>
 <br>
-<img src="MSB_Alumni_F_F_Map-1024x635.png" alt="Cohort Origin Map">
+<center><img src="images/MSB_Alumni_F_F_Map-1024x635.png" alt="Cohort Origin Map" width="800" class="center"></center>
