--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <h1>Welcome to MiM 2022</h1>
 
-<h3>This is our team</h3>
-<img src="team.png" alt="Our Team">
-<p>From left to right: Lilly, Katya, Lola and Rica</p>
+<center><h3>This is our team</h3></center>
+<center><img src="public/images/IMG_9680.jpg" alt="Our Team" width="800"></center>
+<center><p>From left to right: Lilly, Katya, Lola and Rica</p></center>
 
 
